service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
spec:
  selector:
    app: bookstore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
