ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalogservice
                port:
                  number: 4000
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 5000
